# bdp-hw1

./: .gitignore  README.md  pyproject.toml
Queries/: insert_business.cql  insert_business_by_state.cql  insert_business_by_state_city.cql  insert_business_by_state_city_category.cql  insert_review.cql  insert_review_by_user.cql  insert_user.cql  insert_users_by_date.cql  schema.cql  select_avg_stars_by_city.cql  select_avg_stars_by_state.cql  select_avg_stars_by_user_signup.cql  select_avg_stars_for_user.cql  select_best_business_in_state_city.cql  select_user_count_by_signup.cql
data/: download.sh
src/: ingest.py  pre-process.py
src/ingestion/: __init__.py  base.py  buisness.py  reviews.py  reviews_by_user.py  users.py
visualize/: avg_star_by_user_signup.py  avg_star_us_state.py  user_count_by_user_signup.py
